--- a/classes/classes.org
+++ b/classes/classes.org
@@ -13,13 +13,13 @@
 -----
 * [[id:8bb9a08a-97c0-4231-a002-ad7dcf83e4d8][Bard]]
 Support the rest of the party using your talents, or your "talents". Uses unique class abilities and spells, mostly using the *Charisma* stat
-* Druid
+* [[id:8bb9a08a-9770-4231-a002-ad7dcf83e4d8][Druid]]
 Work with the forces of nature to pursue your goals. Uses magic and alchemy primarily, cast using *Charisma* and *Wisdom*
 * [[id:3e1b93b3-f1ad-4148-bb16-5313b376a707][Wizard]]
 Become a powerful channel of the magical elements. Use spells primarily, cast using the character's *Intelligence* stat.
 * Monk
 Trust only in a higher power(s?) to achieve your goals. Uses weapons and unarmed strikes primarily.
-* Sorcerer
+* [[id:f2323133-e17d-4cff-86db-415b72e6d42e][Sorcerer]]
 Manipulate the world around you in a manner of your choosing. Uses spells primarily, cast using Wisdom.
 * Prophet
 Chosen vessel of a particular God. Prophets do not know which God they channel at the beginning of the game. The prophet has a primary mission of discovering which God they are aligned to by learning about the religious system of the world.
@@ -28,5 +28,5 @@ Buy low, sell high! Focus on acquiring as much money as possible; making trades 
 * Warrior
 Hack, slash, pummel, and dominate your enemies on the way to victory. Uses weapons primarily.
 * [[id:7e784143-655d-4170-af49-68aceea59caa][Rogue]]
-
+Sneak, steal, deceive, and assassinate those who oppose your endeavors. Attack using *Dexterity* and *Charisma*.
 -----
