--- a/dm-materials/enemies/pirate-faction.org
+++ b/dm-materials/enemies/pirate-faction.org
@@ -1,3 +1,6 @@
+:PROPERTIES:
+:ID:       11747c43-8efb-4be0-95b3-6739f0bd8b90
+:END:
 #+title: Pirate Faction
 
 Pirates use single-shot pistols that deal high damage with low accuracy. Loyal to the crew, but can be convinced to jump ship for a better deal if the winds of change blow in the opposite direction
