--- a/glossary.org
+++ b/glossary.org
@@ -1,5 +1,5 @@
 :PROPERTIES:
-:ID:       a3719559-2b06-443a-b75a-96c9aa3f3b26
+:ID: a3719559-2b06-443a-b75a-96c9aa3f3b26
 :END:
 #+title:    Glossary
 #+author:   zfoteff
@@ -8,10 +8,10 @@
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="static/stylesheets/default-style.css" />
 
 #+BEGIN_CENTER
-[[[id:DND][Main Menu]]]
+[Main Menu]
 #+END_CENTER
 -----
-_*Charisma*_: Measure of abilty to interact with others. It helps define a characters confidence and eloquence, and reflects a commanding personality. Applies in situations when the user is attempting to convincingly hide the truth, verbally or through actions, or intimidate other characters.
+_*Charisma*_: Measure of ability to interact with others. It helps define a characters confidence and eloquence, and reflects a commanding personality. Applies in situations when the user is attempting to convincingly hide the truth, verbally or through actions, or intimidate other characters.
 
 _*Class*_: A archetype of skills and experience a user's character fits into. Every character will fit differently into the definition of a class, no single character can define a class in its entirety.
 
