--- a/classes/druid.org
+++ b/classes/druid.org
@@ -1,7 +1,8 @@
 :PROPERTIES:
-:ID:       8bb9a08a-9770-4231-a002-ad7dcf83e4d8
+:ID:        8bb9a08a-9770-4231-a002-ad7dcf83e4d8
 :END:
 #+title:    Druid
+#+filetags: :DND:
 #+author:   zfoteff
 #+date:     [2023-07-12 Wed]
 #+summary:  Druid class summary
