--- a/classes/rogue.org
+++ b/classes/rogue.org
@@ -1,16 +1,12 @@
 :PROPERTIES:
-:ID:       7e784143-655d-4170-af49-68aceea59caa
+:ID: 0b7f7671-c4de-41e9-b199-4a9ceb6352d2
 :END:
 #+title:    Rogue
+#+filetags: :DND:
 #+author:   zfoteff
 #+date:     [2023-07-05 Wed]
-#+summary:  Rogue class description
+#+summary: Rogue class description
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../static/stylesheets/subclass-style.css" />
-
-#+BEGIN_CENTER
-[[[id:DND][Main Menu]]] [[[id:17a96883-cc40-409c-9fb5-80d5ab0c8379][Player Introduction Sheet]]] [[[id:campaign-classes][Classes]]]
-#+END_CENTER
------
 Sneak, steal, deceive, and assassinate those who oppose your endeavors.
 
 To begin as a rogue, chose a subclass [[[id:befa4d8e-52ce-4195-9f97-06aee49da164][Ninja]], [[id:072dbba0-dd37-4c57-ae44-959867358be8][Con man]]]. These classes give you special traits that increase in power as you get stronger, and a few distinct advantages right off the bat.
@@ -40,3 +36,4 @@ To begin as a rogue, chose a subclass [[[id:befa4d8e-52ce-4195-9f97-06aee49da164
 19. Subclass Feature. Add 1d6 health.
 20. Multiclass
 -----
+
