--- a/c1/a1/script.org
+++ b/c1/a1/script.org
@@ -2,7 +2,7 @@
 :ID:       52cf202d-2112-4aa9-85ed-4d447a1094c4
 :END:
 #+title:    Adventure 1 Script
-#+filetags: :A1:C1:DND:
+#+filetags: :DM:A1:C1:DND:
 #+author:   zfoteff
 #+date:     [2023-07-25 Tue]
 #+summary:  Adventure 1 script for the journey and all events that could take place during play
